# smeagol

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  DevNotes.md  LICENSE  PowershellNotes.md  README.md  build.rs  dist-workspace.toml  windows_manifest.xml
.cargo/: config  config.toml
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/scripts/: onCreateCommand.sh
.github/workflows/: ci.yml  release.yml  shellcheck.yml
frontend/: README.md  build.cmd  build.sh  index.js  package-lock.json  package.json
site/: README.md  index.html  install.ps1  install.sh
src/: args.rs  assets.rs  error.rs  main.rs  page.rs  repository.rs  requests.rs  settings.rs  templates.rs  wiki.rs
templates/: .edit_page.html.swp  chat.html  edit_page.html  layout.html  overview.html  page_placeholder.html  search_results.html  view_page.html
test_site/: smeagol.toml  test.md
test_site/folder/: more.md
