[package]
name = "smeagol-wiki"
version = "0.4.11"
edition = "2021"
description = "A personal wiki webserver. Work in progress."
license = "MIT"
homepage = "https://github.com/AustinWise/smeagol/"
repository = "https://github.com/AustinWise/smeagol/"
exclude = ["/frontend", "/site"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = "symbols"

[build-dependencies]
ring = "0.16.20"

[dependencies]
askama = "0.12"
bitflags = "1.3.2"
clap = { version = "4.3.11", features = ["derive"] }
git2 = { version = "0.18.2", default-features = false }
lazy_static = "1.4.0"
log = "0.4"
once_cell = "1.18.0"
pretty_env_logger = "0.5"
pulldown-cmark = { version = "0.9", default-features = false }
rand = "0.8.5"
regex = { version = "1.10.3", features = ["std"] }
rocket = "0.5.0"
serde = { version = "1.0", features = ["derive"] }
strum = "0.25"
strum_macros = "0.25"
tantivy = "0.22"
thiserror = "1.0"
toml = "0.7"
