[package]
name = "smeagol-wiki"
version = "0.5.1"
edition = "2021"
description = "A personal wiki webserver. Work in progress."
license = "MIT"
homepage = "https://github.com/AustinWise/smeagol/"
repository = "https://github.com/AustinWise/smeagol/"
exclude = ["/frontend", "/site"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = "symbols"

[build-dependencies]
ring = "0.17"
shadow-rs = "1.1.1"

[dependencies]
askama = "0.12"
bitflags = "2.6"
clap = { version = "4.5", features = ["derive"] }
const_format = "0.2.34"
git2 = { version = "0.20", default-features = false }
lazy_static = "1.5.0"
log = "0.4"
pretty_env_logger = "0.5"
pulldown-cmark = { version = "0.12", features = ["html"] }
rand = "0.8.5"
regex = { version = "1.11", features = ["std"] }
rocket = "0.5.1"
serde = { version = "1.0", features = ["derive"] }
shadow-rs = { version = "1.1.1", default-features = false }
strum = "0.26"
strum_macros = "0.26"
tantivy = "0.25"
thiserror = "2.0"
toml = "0.9"
