[package]
name = "smeagol-wiki"
version = "0.5.1"
edition = "2021"
description = "A personal wiki webserver. Work in progress."
license = "MIT"
homepage = "https://github.com/AustinWise/smeagol/"
repository = "https://github.com/AustinWise/smeagol/"
exclude = ["/frontend", "/site"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = "symbols"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[build-dependencies]
ring = "0.17"
shadow-rs = "1.1.1"

[dependencies]
askama = "0.15"
bitflags = "2.6"
clap = { version = "4.5", features = ["derive"] }
const_format = "0.2.34"
git2 = { version = "0.20", default-features = false }
lazy_static = "1.5.0"
log = "0.4"
pretty_env_logger = "0.5"
pulldown-cmark = { version = "0.13", features = ["html"] }
rand = "0.8.5"
regex = { version = "1.12", features = ["std"] }
rocket = "0.5.1"
serde = { version = "1.0", features = ["derive"] }
shadow-rs = { version = "1.6", default-features = false }
strum = "0.27"
strum_macros = "0.27"
thiserror = "2.0"
toml = "0.9"

[dependencies.tantivy]
version = "0.26.0"
# Disable default feature "lz4-compression" and use "zstd-compression", since we were already using
# zstd from the columnar feature anyways. We probably don't need compression of any kind, but it's
# not clear to me how much Tantivy needs it to operate correctly.
default-features = false
features = ["mmap", "stopwords", "zstd-compression", "columnar-zstd-compression", "stemmer"]
